# BICA-dialog

bica_dialog/: CMakeLists.txt
bica_dialog/scripts/: ros_soundclient.py
bica_dialog/src/: DialogInterface.cpp  batterycontrol.cpp  commands_DialogInterface.cpp  location_DialogInterface.cpp  locationsSubscriber.cpp  main_DialogInterface.cpp  open_DialogInterface.cpp  order_DialogInterface.cpp  pinger.cpp  securebumper.cpp  talkPublisher.cpp  talkSubscriber.cpp
bica_dialog/test/: test_DialogInterface.launch
